--- a/ChatHouse/app/src/main/res/layout/activity_home_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_home_page.xml
@@ -24,6 +24,12 @@
             android:textColor="@color/Verypink"
             android:textSize="21dp"
             android:textStyle="bold" />
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/white"
+            android:tooltipText="Interests" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,11 +41,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="serif"
                 android:gravity="center"
                 android:layout_marginBottom="5dp"
-                android:text="You may interested in this Rooms"
-                android:textColor="@color/Verypink"
+                android:text="You may be interested in this Rooms"
+                android:fontFamily="serif"
+                android:textColor="@color/gray"
+                android:textStyle="italic"
                 android:textSize="16dp" />
 
             <ListView
@@ -81,7 +88,8 @@
                 android:gravity="center"
                 android:fontFamily="serif"
                 android:text="Your friends Rooms"
-                android:textColor="@color/Verypink"
+                android:textColor="@color/gray"
+                android:textStyle="italic"
                 android:textSize="16dp" />
             <ListView
                 android:id="@+id/SuggestRoomsFollowings"
