--- a/ChatHouse/app/src/main/res/layout/activity_home_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_home_page.xml
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
                 android:gravity="center"
-                android:text="No Results Found"
+                android:text=""
                 android:fontFamily="serif"
                 android:textColor="@color/black"
                 android:textSize="20dp"
@@ -103,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
                 android:gravity="center"
-                android:text="No Results Found"
+                android:text=""
                 android:fontFamily="serif"
                 android:textColor="@color/black"
                 android:textSize="20dp"
