--- a/ChatHouse/app/src/main/res/layout/activity_search.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_search.xml
@@ -58,7 +58,8 @@
             android:text="Search in all people"
             android:textColor="@color/Verypink"
             android:textStyle="bold"
-            android:textSize="22dp"
+            android:fontFamily="serif"
+            android:textSize="20dp"
             android:layout_gravity="center" />
 
         <ProgressBar
