--- a/ChatHouse/app/src/main/res/layout/activity_room.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_room.xml
@@ -33,10 +33,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/RoomName"
-        android:layout_above="@+id/LeaveRoom"
         android:id="@+id/chatFragment"
-        android:layout_marginTop="5dp"
-      >
+        android:layout_marginTop="5dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -56,6 +54,18 @@
             </ListView>
         </LinearLayout>
 
+        <ImageButton
+            android:id="@+id/chat_downBtn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_above="@id/SendButton"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="30dp"
+            android:background="#00FFFFFF"
+            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
+            android:visibility="gone">
+        </ImageButton>
         <EditText
             android:layout_width="match_parent"
             android:minHeight="50dp"
