--- a/ChatHouse/app/src/main/res/layout/activity_following_followers_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_following_followers_page.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Pages.ProfilePage"
+    android:id="@+id/FollowingBack"
     android:background="@drawable/b22">
     <TextView
         android:layout_width="wrap_content"
