--- a/ChatHouse/app/src/main/res/layout/activity_home_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_home_page.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/Home_menu"
         android:background="@drawable/b22"
+        android:id="@+id/Homeback"
         android:orientation="vertical">
 
         <TextView
@@ -21,7 +22,7 @@
             android:layout_marginTop="10dp"
             android:fontFamily="serif"
             android:text="Home"
-            android:textColor="@color/Verypink"
+            android:textColor="?colorSecondary"
             android:textSize="21dp"
             android:textStyle="bold" />
         <View
@@ -45,7 +46,7 @@
                 android:layout_marginBottom="5dp"
                 android:text="You may be interested in this Rooms"
                 android:fontFamily="serif"
-                android:textColor="@color/gray"
+                android:textColor="?colorPrimary"
                 android:textStyle="italic"
                 android:textSize="16dp" />
 
@@ -88,7 +89,7 @@
                 android:gravity="center"
                 android:fontFamily="serif"
                 android:text="Your friends Rooms"
-                android:textColor="@color/gray"
+                android:textColor="?colorPrimary"
                 android:textStyle="italic"
                 android:textSize="16dp" />
             <ListView
@@ -122,7 +123,7 @@
             android:drawableLeft="@drawable/plus"
             android:fontFamily="sans-serif-medium"
             android:text="Start Room"
-            android:textColor="@color/almostorange"
+            android:textColor="?colorSecondaryVariant"
             android:textSize="16dp"></Button>
 
     </LinearLayout>
@@ -142,7 +143,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/light"
+        android:background="?colorPrimaryVariant"
         app:itemIconTint="@color/black"
         app:itemTextColor="@color/black"
 
