--- a/ChatHouse/app/src/main/res/layout/activity_login.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     tools:context=".Pages.Login"
     android:paddingVertical="8dp"
     android:paddingHorizontal="35dp"
-    android:background="@color/light"
+    android:background="?colorPrimaryVariant"
 >
 
     <TextView
@@ -21,7 +21,7 @@
         android:fontFamily="serif"
         android:gravity="center"
         android:text="GoNuts"
-        android:textColor="@color/Verypink"
+        android:textColor="?colorSecondary"
         android:textColorLink="@color/black"
         android:textSize="50dp"
         app:layout_constraintBottom_toTopOf="@+id/ErrorMessage"
@@ -62,7 +62,7 @@
         android:id="@+id/Username"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:backgroundTint="@color/almostorange"
+        android:backgroundTint="?colorSecondaryVariant"
         android:ems="10"
         android:fontFamily="sans-serif-condensed-light"
         android:hint="Email or Username"
@@ -77,7 +77,7 @@
         android:id="@+id/Password"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:backgroundTint="@color/almostorange"
+        android:backgroundTint="?colorSecondaryVariant"
         android:ems="10"
         android:fontFamily="sans-serif-condensed-light"
         android:hint="Password"
@@ -108,7 +108,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginBottom="128dp"
-        android:backgroundTint="@color/Verypink"
+        android:backgroundTint="?colorSecondary"
         android:fontFamily="sans-serif-condensed-light"
         android:text="Login"
         android:textColor="@color/white"
