--- a/ChatHouse/app/src/main/res/layout/list_view_room_searched_items.xml
+++ b/ChatHouse/app/src/main/res/layout/list_view_room_searched_items.xml
@@ -37,7 +37,7 @@
                     android:paddingLeft="15dp"
                     android:paddingEnd="16dp"
                     android:paddingRight="16dp"
-                    android:textColor="@color/Verypink"
+                    android:textColor="?colorSecondary"
                     android:textSize="21sp"
                     android:textStyle="bold"
                     android:layout_weight="1"
@@ -51,7 +51,7 @@
                     android:paddingLeft="15dp"
                     android:paddingEnd="16dp"
                     android:paddingRight="16dp"
-                    android:textColor="@color/Verypink"
+                    android:textColor="?colorSecondary"
                     android:textSize="17sp"
                     android:layout_weight="1"/>
 
@@ -74,7 +74,7 @@
                     android:paddingLeft="8dp"
                     android:paddingEnd="16dp"
                     android:paddingRight="16dp"
-                    android:textColor="@color/Verypink"
+                    android:textColor="?colorSecondary"
                     android:textSize="17sp"
                     android:layout_weight="1"/>
 
@@ -86,7 +86,7 @@
                     android:paddingLeft="8dp"
                     android:paddingEnd="16dp"
                     android:paddingRight="16dp"
-                    android:textColor="@color/Verypink"
+                    android:textColor="?colorSecondary"
                     android:textSize="17sp"
                     android:layout_weight="1"/>
             </LinearLayout>
