--- a/ChatHouse/app/src/main/res/layout/activity_main.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light"
+    android:background="?colorPrimaryVariant"
     android:padding="8dp"
     tools:context=".Pages.MainActivity">
 
