--- a/ChatHouse/app/src/main/res/layout/activity_profile_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_profile_page.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/b22"
+        android:id="@+id/ProfileBack"
         tools:context=".Pages.ProfilePage"
         android:layout_above="@+id/Profile_menu">
 
@@ -75,7 +76,7 @@
                     android:fontFamily="serif"
                     android:gravity="center"
                     android:text="Melika"
-                    android:textColor="@color/Verypink"
+                    android:textColor="?colorSecondary"
                     android:textSize="20dp">
 
                 </TextView>
@@ -87,7 +88,7 @@
                     android:fontFamily="serif"
                     android:gravity="center"
                     android:text="Ahmadi"
-                    android:textColor="@color/Verypink"
+                    android:textColor="?colorSecondary"
                     android:textSize="20dp">
 
                 </TextView>
@@ -103,7 +104,7 @@
                 android:fontFamily="sans-serif-condensed-medium"
                 android:gravity="center"
                 android:text="Username"
-                android:textColor="@color/Verypink"
+                android:textColor="?colorSecondary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/Name"></TextView>
@@ -143,7 +144,7 @@
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"
                     android:text="3453"
-                    android:textColor="@color/Verypink"
+                    android:textColor="?colorSecondary"
                     android:textSize="18dp"
                     app:layout_constraintEnd_toStartOf="@+id/FollowingText"
                     app:layout_constraintStart_toStartOf="parent">
@@ -158,7 +159,7 @@
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"
                     android:text="1238"
-                    android:textColor="@color/Verypink"
+                    android:textColor="?colorSecondary"
                     android:textSize="18dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -175,7 +176,7 @@
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"
                     android:text="Followers"
-                    android:textColor="@color/Verypink"
+                    android:textColor="?colorSecondary"
                     android:textSize="10dp"
                     app:layout_constraintEnd_toStartOf="@+id/FollowingText"
                     app:layout_constraintStart_toStartOf="parent"
@@ -192,7 +193,7 @@
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"
                     android:text="Following"
-                    android:textColor="@color/Verypink"
+                    android:textColor="?colorSecondary"
                     android:textSize="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -219,7 +220,7 @@
                     android:layout_width="170dp"
                     android:backgroundTint="@color/white"
                     android:text="Message"
-                    android:textColor="@color/almostorange"
+                    android:textColor="?colorSecondaryVariant"
                     android:textSize="12dp">
 
                 </Button>
@@ -229,7 +230,7 @@
                     android:layout_width="171dp"
                     android:backgroundTint="@color/white"
                     android:text="Follow"
-                    android:textColor="@color/almostorange"
+                    android:textColor="?colorSecondaryVariant"
 
                     android:textSize="12dp">
 
@@ -255,7 +256,7 @@
                     android:layout_width="170dp"
                     android:backgroundTint="@color/white"
                     android:text="Edit Profile"
-                    android:textColor="@color/almostorange"
+                    android:textColor="?colorSecondaryVariant"
                     android:textSize="12dp">
 
                 </Button>
@@ -265,7 +266,7 @@
                     android:layout_width="171dp"
                     android:backgroundTint="@color/white"
                     android:text="Setting"
-                    android:textColor="@color/almostorange"
+                    android:textColor="?colorSecondaryVariant"
 
                     android:textSize="12dp">
 
@@ -282,7 +283,7 @@
                 android:fontFamily="sans-serif-condensed-medium"
                 android:gravity="center"
                 android:text="Bio"
-                android:textColor="@color/Verypink"
+                android:textColor="?colorSecondary"
                 android:textSize="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -321,31 +322,6 @@
 
 
             </HorizontalScrollView>
-            <!--    </com.google.android.material.card.MaterialCardView>-->
-
-
-            <!--    <TextView-->
-            <!--        android:layout_width="wrap_content"-->
-            <!--        android:layout_height="wrap_content"-->
-            <!--        android:id="@+id/InterestsOnOffText"-->
-            <!--        android:layout_marginLeft="0dp"-->
-            <!--        app:layout_constraintStart_toStartOf="parent"-->
-            <!--        android:text="Show interests in profile"-->
-            <!--        android:textSize="15dp"-->
-            <!--        android:fontFamily="sans-serif-medium"-->
-            <!--        android:textColor="@color/almostpink"-->
-            <!--        app:layout_constraintTop_toBottomOf="@id/Interests"></TextView>-->
-            <!--    <Switch-->
-            <!--        android:layout_width="wrap_content"-->
-            <!--        android:layout_height="wrap_content"-->
-            <!--        android:id="@+id/InterestsOnOff"-->
-            <!--        android:layout_marginLeft="0dp"-->
-            <!--        app:layout_constraintEnd_toEndOf="parent"-->
-            <!--        android:textOff="Hide"-->
-            <!--        android:textOn="Show"-->
-            <!--        app:layout_constraintTop_toBottomOf="@id/Interests">-->
-
-            <!--    </Switch>-->
 
             <TextView
                 android:id="@+id/EmailText"
@@ -355,7 +331,7 @@
                 android:fontFamily="sans-serif-condensed-medium"
                 android:gravity="center"
                 android:text="Email"
-                android:textColor="@color/Verypink"
+                android:textColor="?colorSecondary"
                 android:textSize="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -389,6 +365,6 @@
         app:itemTextColor="@color/black"
         android:layout_alignParentBottom="true"
         app:labelVisibilityMode="labeled"
-        android:background="@color/light"
+        android:background="?colorPrimaryVariant"
         app:menu="@menu/bottom_navigation"/>
 </RelativeLayout>
