--- a/ChatHouse/app/src/main/res/layout/activity_setting_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_setting_page.xml
@@ -5,7 +5,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Pages.SettingPage"
+    android:id="@+id/settingback"
     android:background="@drawable/b22">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20dp"
+        android:textSize="20dp"
+        android:id="@+id/txt"
+        android:textStyle="bold"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/group"
+        android:text="Theme">
+
+    </TextView>
+    <RadioGroup
+        android:id="@+id/group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/txt"
+        android:orientation="vertical">
+
+
+        <RadioButton
+            android:id="@+id/dark"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:paddingStart="10dp"
+            android:text="Dark"/>
+
+        <RadioButton
+            android:id="@+id/light"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:paddingStart="10dp"
+            android:text="Light"/>
+
+    </RadioGroup>
+
     <Button
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -13,7 +54,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/white"
         android:text="Logout"
-        android:textColor="@color/almostorange"
+        android:textColor="?colorSecondaryVariant"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="10dp"
