--- a/ChatHouse/app/src/main/res/layout/chat_right.xml
+++ b/ChatHouse/app/src/main/res/layout/chat_right.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
-            android:backgroundTint="@color/light"
+            android:backgroundTint="?colorPrimaryVariant"
             android:minWidth="80dp"
             android:minHeight="30dp"
             android:maxWidth="35dp"
@@ -54,7 +54,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
                     android:text="2:20 PM"
-                    android:textColor="@color/gray"
+                    android:textColor="?colorPrimary"
                     android:textSize="12dp"
                     android:textStyle="normal">
 
