--- a/ChatHouse/app/src/main/res/layout/dialog_room_creation.xml
+++ b/ChatHouse/app/src/main/res/layout/dialog_room_creation.xml
@@ -19,7 +19,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="20dp"
-            android:textColor="@color/almostorange"
+            android:textColor="?colorSecondaryVariant"
             android:textStyle="bold"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
@@ -36,7 +36,7 @@
             android:text="Name: "
             android:textSize="18dp"
             android:layout_marginLeft="20dp"
-            android:textColor="@color/gray"
+            android:textColor="?colorPrimary"
             android:id="@+id/NameRoom">
 
         </TextView>
@@ -56,7 +56,7 @@
             app:layout_constraintTop_toBottomOf="@+id/NameRoom"
             android:text="Description: "
             android:textSize="18dp"
-            android:textColor="@color/gray"
+            android:textColor="?colorPrimary"
             android:id="@+id/DesRoom">
 
         </TextView>
@@ -75,7 +75,7 @@
             app:layout_constraintTop_toBottomOf="@+id/DesRoom"
             android:text="Time: "
             android:textSize="18dp"
-            android:textColor="@color/gray"
+            android:textColor="?colorPrimary"
             android:id="@+id/TimeText">
 
         </TextView>
@@ -97,7 +97,7 @@
             app:layout_constraintTop_toBottomOf="@+id/in_time"
             android:text="Interest: "
             android:textSize="18dp"
-            android:textColor="@color/gray"
+            android:textColor="?colorPrimary"
             android:id="@+id/InterestText">
 
         </TextView>
@@ -166,7 +166,7 @@
                             android:layout_columnWeight="1"
                             android:layout_margin="12dp"
                             app:cardCornerRadius="50dp"
-                            android:backgroundTint="@color/almostorange"
+                            android:backgroundTint="?colorSecondaryVariant"
                             app:cardElevation="6dp">
 
                             <TextView
@@ -189,7 +189,7 @@
                             android:layout_columnWeight="1"
                             android:layout_margin="12dp"
                             app:cardCornerRadius="50dp"
-                            android:backgroundTint="@color/almostorange"
+                            android:backgroundTint="?colorSecondaryVariant"
                             app:cardElevation="6dp">
 
                             <TextView
@@ -212,7 +212,7 @@
                             android:layout_columnWeight="1"
                             android:layout_margin="12dp"
                             app:cardCornerRadius="50dp"
-                            android:backgroundTint="@color/almostorange"
+                            android:backgroundTint="?colorSecondaryVariant"
                             app:cardElevation="6dp">
 
                             <TextView
@@ -235,7 +235,7 @@
                             android:layout_columnWeight="1"
                             android:layout_margin="12dp"
                             app:cardCornerRadius="50dp"
-                            android:backgroundTint="@color/almostorange"
+                            android:backgroundTint="?colorSecondaryVariant"
                             app:cardElevation="6dp">
 
                             <TextView
@@ -258,7 +258,7 @@
                             android:layout_columnWeight="1"
                             android:layout_margin="12dp"
                             app:cardCornerRadius="50dp"
-                            android:backgroundTint="@color/almostorange"
+                            android:backgroundTint="?colorSecondaryVariant"
                             app:cardElevation="6dp">
 
                             <TextView
@@ -280,7 +280,7 @@
                             android:layout_rowWeight="1"
                             android:layout_columnWeight="1"
                             android:layout_margin="12dp"
-                            android:backgroundTint="@color/almostorange"
+                            android:backgroundTint="?colorSecondaryVariant"
                             app:cardCornerRadius="50dp"
                             app:cardElevation="6dp">
 
@@ -304,7 +304,7 @@
                             android:layout_columnWeight="1"
                             android:layout_margin="12dp"
                             app:cardCornerRadius="50dp"
-                            android:backgroundTint="@color/almostorange"
+                            android:backgroundTint="?colorSecondaryVariant"
                             app:cardElevation="6dp">
 
                             <TextView
@@ -327,7 +327,7 @@
                             android:layout_columnWeight="1"
                             android:layout_margin="12dp"
                             app:cardCornerRadius="50dp"
-                            android:backgroundTint="@color/almostorange"
+                            android:backgroundTint="?colorSecondaryVariant"
                             app:cardElevation="6dp">
 
                             <TextView
@@ -348,7 +348,7 @@
                             android:layout_height="wrap_content"
                             android:layout_rowWeight="1"
                             android:layout_columnWeight="1"
-                            android:backgroundTint="@color/almostorange"
+                            android:backgroundTint="?colorSecondaryVariant"
                             android:layout_margin="12dp"
                             app:cardCornerRadius="50dp"
                             app:cardElevation="6dp">
@@ -370,7 +370,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_rowWeight="1"
-                            android:backgroundTint="@color/almostorange"
+                            android:backgroundTint="?colorSecondaryVariant"
                             android:layout_columnWeight="1"
                             android:layout_margin="12dp"
                             app:cardCornerRadius="50dp"
@@ -393,7 +393,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_rowWeight="1"
-                            android:backgroundTint="@color/almostorange"
+                            android:backgroundTint="?colorSecondaryVariant"
                             android:layout_columnWeight="1"
                             android:layout_margin="12dp"
                             app:cardCornerRadius="50dp"
@@ -416,7 +416,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_rowWeight="1"
-                            android:backgroundTint="@color/almostorange"
+                            android:backgroundTint="?colorSecondaryVariant"
                             android:layout_columnWeight="1"
                             android:layout_margin="12dp"
                             app:cardCornerRadius="50dp"
@@ -440,7 +440,7 @@
                             android:layout_height="wrap_content"
                             android:layout_rowWeight="1"
                             android:layout_columnWeight="1"
-                            android:backgroundTint="@color/almostorange"
+                            android:backgroundTint="?colorSecondaryVariant"
                             android:layout_margin="12dp"
                             app:cardCornerRadius="50dp"
                             app:cardElevation="6dp">
@@ -462,7 +462,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_rowWeight="1"
-                            android:backgroundTint="@color/almostorange"
+                            android:backgroundTint="?colorSecondaryVariant"
                             android:layout_columnWeight="1"
                             android:layout_margin="12dp"
                             app:cardCornerRadius="50dp"
@@ -522,7 +522,7 @@
             android:text="Select date"
             android:id="@+id/btn_date"
             android:layout_marginLeft="10dp"
-            android:textColor="@color/gray"
+            android:textColor="?colorPrimary"
             android:backgroundTint="@color/white"
             app:layout_constraintStart_toEndOf="@+id/in_date"
             app:layout_constraintEnd_toEndOf="parent"
@@ -543,7 +543,7 @@
             android:text="SELECT TIME"
             android:layout_marginLeft="10dp"
             android:id="@+id/btn_time"
-            android:textColor="@color/gray"
+            android:textColor="?colorPrimary"
             android:backgroundTint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/in_time"
@@ -557,7 +557,7 @@
             android:layout_marginTop="10dp"
             android:text="Create"
             android:id="@+id/Create"
-            android:textColor="@color/gray"
+            android:textColor="?colorPrimary"
             android:backgroundTint="@color/white"
             app:layout_constraintTop_toBottomOf="@id/LinearLayoutCategory"
             app:layout_constraintStart_toStartOf="parent"
@@ -570,7 +570,7 @@
             android:text="Delete"
             android:id="@+id/Delete"
             android:textColor="@color/white"
-            android:backgroundTint="@color/almostorange"
+            android:backgroundTint="?colorSecondaryVariant"
             app:layout_constraintTop_toBottomOf="@id/LinearLayoutCategory"
             app:layout_constraintEnd_toEndOf="parent"
             ></Button>
