--- a/ChatHouse/app/src/main/res/layout/list_view_searched_items.xml
+++ b/ChatHouse/app/src/main/res/layout/list_view_searched_items.xml
@@ -33,7 +33,7 @@
             android:paddingLeft="8dp"
             android:paddingEnd="16dp"
             android:paddingRight="16dp"
-            android:textColor="@color/Verypink"
+            android:textColor="?colorSecondary"
             android:textSize="19sp"
             />
         <TextView
@@ -44,7 +44,7 @@
             android:paddingLeft="8dp"
             android:paddingEnd="16dp"
             android:paddingRight="16dp"
-            android:textColor="@color/Verypink"
+            android:textColor="?colorSecondary"
             android:textSize="15sp" />
     </LinearLayout>
 
