--- a/ChatHouse/app/src/main/res/layout/simple_list_1.xml
+++ b/ChatHouse/app/src/main/res/layout/simple_list_1.xml
@@ -5,7 +5,7 @@
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textColor="@color/gray"
+    android:textColor="?colorPrimary"
     android:textSize="20dp"
     android:id="@+id/textView"
     android:layout_marginBottom="5dp">
