--- a/ChatHouse/app/src/main/res/values/colors.xml
+++ b/ChatHouse/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+<!--    <color name="purple_200">#FFBB86FC</color>-->
+<!--    <color name="purple_500">#FF6200EE</color>-->
+<!--    <color name="purple_700">#FF3700B3</color>-->
+<!--    <color name="teal_200">#FF03DAC5</color>-->
+<!--    <color name="teal_700">#FF018786</color>-->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light">#E7D2CC</color>
@@ -15,8 +15,14 @@
     <color name="Pink">#FB6B90</color>
     <color name="Verypink">#710117</color>
     <color name="Orange">#D48C70</color>
-    <color name="cyan">#EEEDE7</color>
     <color name="almostgreen">#EBBBB0</color>
+    <color name="purpulelight">#917898</color>
+    <color name="purpulel">#603D65</color>
+    <color name="betweengraypurpule">#9C97B3</color>
+    <color name="darkpur">#5C1CCF</color>
+    <color name="purlight">#d5ddef</color>
+    <color name="puralmost">#BA99A4</color>
+    <color name="yasi">#9885b2</color>
 
 
 
