--- a/ChatHouse/app/src/main/res/layout/chat_reply_left.xml
+++ b/ChatHouse/app/src/main/res/layout/chat_reply_left.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
             android:layout_toEndOf="@+id/chat_image_left_reply"
-            android:backgroundTint="@color/almostgreen"
+            android:backgroundTint="?colorSecondaryVariant"
             android:minWidth="80dp"
             android:minHeight="60dp"
             app:cardCornerRadius="13dp"
@@ -43,7 +43,7 @@
                     android:layout_gravity="left"
                     android:gravity="left"
                     android:text="ali farahat"
-                    android:textColor="@color/gray"
+                    android:textColor="?colorPrimary"
                     android:textSize="15dp"
                     android:textStyle="bold">
 
@@ -74,7 +74,7 @@
                             android:layout_gravity="left"
                             android:gravity="left"
                             android:text="melika ahmadi"
-                            android:textColor="@color/gray"
+                            android:textColor="?colorPrimary"
                             android:textSize="15dp"
                             android:textStyle="bold"
                             android:layout_marginTop="2dp"
