--- a/ChatHouse/app/src/main/res/layout/activity_main.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="150dp"
         android:ems="10"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
