--- a/ChatHouse/app/src/main/res/layout/activity_room.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_room.xml
@@ -162,8 +162,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
+            android:layout_marginHorizontal="7dp"
             android:layout_toStartOf="@+id/SendButton"
             android:layout_toEndOf="@+id/Attachment"
             android:hint="Enter message"
@@ -198,13 +197,13 @@
     </RelativeLayout>
 
 
-    <!--    <View-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="40dp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        android:background="?colorPrimaryVariant">-->
+<!--        <View-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="40dp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            android:background="?colorPrimaryVariant">-->
 
-    <!--    </View>-->
+<!--        </View>-->
 
 </RelativeLayout>
